--- a/lesson2-is206/web/signup-form.html
+++ b/lesson2-is206/web/signup-form.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-    <h1>Signup</h1>
+<html>
+<head>
+	<title>Signup</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head> 
+<body>
+	<h1>Signup</h1>
     <form method="post">
 		Username: <input type="text" name="username" value="{{username}}">
 			<div style="color: red">{{error_username}}</div><br/>
